--- a/style.css
+++ b/style.css
@@ -21,11 +21,31 @@ body{
     color: var(--text);
     background-color: var(--secondary);
 }
-
+/* ------------------------------- Header */
 header{
     background-color: var(--primary);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
 }
 
+#theme{
+    cursor: pointer;
+}
+
+/* -------------------------------- MAIN */
+
+
+/* ------------------------------- MAIN .Filters */
+
+.filters{
+    margin: 20px 40px;
+    /* padding: 20px; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 option,select{
     color: var(--text);
     background-color: var(--primary);
@@ -33,4 +53,41 @@ option,select{
 input{
     color: var(--text);
     background-color: var(--primary);   
+}
+
+
+/* ------------------------------- MAIN .Countries */
+
+.countries{
+    display: grid;
+    grid-template: auto / 1fr 1fr 1fr 1fr ;
+    gap: 20px;
+    margin: 20px;
+    grid-auto-flow: row;
+    
+}
+.country{
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: var(--primary);
+    cursor: pointer;
+    margin: 20px;
+}
+.card-details{
+    padding: 0 15px 15px;
+}
+
+.card-details h2{
+    margin: 10px 0;
+}
+.card-details p{
+    margin-bottom: 4px;
+    font-weight: 700;
+}
+.card-details p span{
+    opacity: .5;
+}
+img{
+    width: 100%;
+    
 }
