--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
 body{
     color: var(--text);
     background-color: var(--secondary);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    letter-spacing: 2px;
 }
 /* ------------------------------- Header */
 header{
@@ -55,8 +57,6 @@ option,select{
     border-radius: 5px;
     padding: 15px;
     box-shadow: 0 0px 4px var(--text);
-
-
     max-width: 100%;
     
 }
@@ -71,7 +71,7 @@ input{
     padding: 15px;
 
     max-width: 100%;
-    width: 280px;
+    width: 250px;
 }
 
 
@@ -115,6 +115,8 @@ input{
 img{
     width: 100%;
     max-width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 
 
