--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 body{
     color: var(--text);
     background-color: var(--secondary);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
     letter-spacing: 2px;
 }
 /* ------------------------------- Header */
@@ -37,7 +37,6 @@ header{
 }
 
 /* -------------------------------- MAIN */
-
 
 /* ------------------------------- MAIN .Filters */
 
@@ -92,7 +91,12 @@ input{
     cursor: pointer;
     margin: 20px;
     box-shadow: 0 0px 4px var(--text);
-
+}
+.country img{
+    width: 100%;
+    max-width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 .card-details{
     padding: 0 15px 15px;
@@ -112,13 +116,73 @@ input{
 .card-details p span{
     opacity: .5;
 }
-img{
+
+/* -------------------------- POPUP */
+#popup{
+    background-color: var(--secondary);
+    
+    width: 95%;
+
+    margin: 100px auto;
+}
+#back-link{
+    text-decoration: none;
+    color: var(--text);
+    border: 2px solid var(--text);
+    padding: 5px;
+    border-radius: 4px;
+    position: relative;
+    top:30px;
+    left:30px
+}
+.popup-details{
+    
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    gap: 20px;
+    max-width: 1200px;
+    margin: auto;
+    
+}
+.popup-details img{
     width: 100%;
-    max-width: 100%;
-    height: 150px;
-    object-fit: cover;
+    max-width: 300px;
 }
 
+.popup-country h2{
+    margin: 10px auto;
+}
+.popup-country-details{
+    display:grid;
+    grid-template: repeat(5,1fr) / 1fr 1fr;
+    grid-auto-flow: column;
+}
+.popup-country-details p{
+    font-size: .8rem;
+    margin-bottom: 5px;
+}
+
+.popup-country-details p span{
+    font-size: .8rem;
+    
+    
+}
+
+
+.border-countries{
+    flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.border-countries span{
+    margin-left: 5px;
+    color: var(--text);
+    border: 2px solid var(--text);
+    padding: 5px;
+    border-radius: 4px;
+}
 
 
 /* MEDIA queries */
@@ -134,6 +198,9 @@ img{
 @media screen and (max-width:840px) {
     .countries{
         grid-template: auto / 1fr 1fr ;
+    }
+    .popup-country-details{
+        grid-template:repeat(8,1fr) / 1fr;
     }
 
 }
@@ -159,6 +226,15 @@ img{
         align-self: flex-start;
     }
     
+    .popup-details{
+        width: 90%;
+        flex-direction: column;
+    }
+    
+    .popup-details img{
+
+        max-width: unset;
+    }
     
 }
 
